include_directories(../include)

add_executable(array_test array_test.cpp)
add_executable(bcc_test bcc_test.cpp)
add_executable(fcc_test fcc_test.cpp)
add_executable(cc_test cc_test.cpp)
add_executable(ply_test ply_test.cpp)
add_executable(mc_test mc_test.cpp)
add_executable(prim_test primitive_test.cpp)
add_executable(scattered_test scattered_test.cpp)


target_link_libraries (array_test ${LIBS})
target_link_libraries (bcc_test ${LIBS})
target_link_libraries (bcc_test ${LIBS})
target_link_libraries (fcc_test ${LIBS})
target_link_libraries (cc_test ${LIBS})
target_link_libraries (cc_test ${LIBS})
target_link_libraries (prim_test ${LIBS})
target_link_libraries (scattered_test ${LIBS})

add_test(ArrayTest array_test)
add_test(BCCTest bcc_test)
add_test(CartesianTest cc_test)
add_test(PlyTest ply_test)
add_test(MarchingCubesTest mc_test)
add_test(PrimitiveTest prim_test)
add_test(ScatteredDataTest scattered_test)
add_test(FCCTest fcc_test)
